--- a/CourseApi.csproj
+++ b/CourseApi.csproj
@@ -16,5 +16,6 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.26.1"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0"/>
+    <PackageReference Include="log4net" Version="*"/>
   </ItemGroup>
 </Project>
